src/test/ui/pub/pub-ident-fn-or-struct.stderr
error: missing `fn` or `struct` for function or struct definition
  --> $DIR/pub-ident-fn-or-struct.rs:1:4
   |
LL | pub S (foo) bar
   | ---^- help: if you meant to call a macro, try: `S!`

error: aborting due to previous error

