src/test/ui/pub/pub-ident-fn-or-struct.rs
pub S (foo) bar
//~^ ERROR missing `fn` or `struct` for method or struct definition

fn main() {}
